<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/tendp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/foodie_color"
        android:gravity="center"
        android:text="@string/apply_promocode"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPromocode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tendp"
        android:background="@drawable/border_back"
        android:gravity="start"
        android:textSize="@dimen/dim14sp"
        android:hint="@string/enter_promo_code"
        android:padding="@dimen/tendp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/etSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/address_selected"
        android:gravity="center"
        android:paddingLeft="@dimen/dim100dp"
        android:paddingRight="@dimen/dim100dp"
        android:padding="@dimen/tendp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/sixteensp" />
</androidx.appcompat.widget.LinearLayoutCompat>