<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".fragment.OrderPlacedAlertFragment">

    <!--
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dim180dp"
            android:layout_height="@dimen/dim150dp"
            android:src="@drawable/logo" />
    -->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOrderPlaced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/order_placed"
        android:textColor="@color/green"
        android:textSize="@dimen/eighteensp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twentydp"
        android:gravity="center"
        android:text="@string/you_can_check_status_of_your_order_into_order_history"
        android:textSize="@dimen/dim14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btTrackOrder"
        android:layout_width="@dimen/dim200dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/twentydp"
        android:background="@color/foodie_color"
        android:text="@string/track_order"
        android:textSize="@dimen/dim12sp"
        android:textColor="@color/white" />
</androidx.appcompat.widget.LinearLayoutCompat>